--- a/package.json
+++ b/package.json
@@ -6,30 +6,33 @@
   "description": "Multi-application system for managing club check-ins, room inventory, cleaning workflows, and operational metrics",
   "scripts": {
     "kill-ports": "node scripts/kill-ports.cjs",
+
     "db:start": "pnpm --filter @club-ops/api db:start",
     "db:stop": "pnpm --filter @club-ops/api db:stop",
     "db:reset": "pnpm --filter @club-ops/api db:reset",
     "db:migrate": "pnpm --filter @club-ops/api db:migrate",
     "db:migrate:baseline": "PGMIGRATE_INCLUDE_BASELINE=1 pnpm --filter @club-ops/api db:migrate",
     "db:seed": "pnpm --filter @club-ops/api seed",
-    "start:local": "pnpm kill-ports && pnpm db:reset && pnpm db:migrate:baseline && pnpm db:seed && pnpm dev",
+
     "dev": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
-    "dev:cloud": "turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
-    "dev-test": "pnpm kill-ports && turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register",
+    "dev:fast": "turbo run dev --filter=@club-ops/api --filter=@club-ops/customer-kiosk --filter=@club-ops/employee-register --filter=@club-ops/office-dashboard",
+
     "build": "turbo run build",
     "test": "pnpm kill-ports && turbo run test",
     "lint": "turbo run lint",
-    "doctor": "node scripts/doctor.cjs",
+    "lint:strict": "eslint . --max-warnings 0",
     "typecheck": "turbo run typecheck",
+
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+
+    "doctor": "node scripts/doctor.cjs",
     "spec:check": "node scripts/spec-compliance.mjs",
+
     "demo:seed": "turbo run build --filter=@club-ops/shared --filter=@club-ops/ui && DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts",
-    "demo": "node scripts/demo.mjs",
     "demo:dev": "pnpm demo:seed && DEMO_MODE=true pnpm dev",
-    "demo:dev:seedOnBoot": "pnpm demo:seed && DEMO_MODE=true SEED_ON_STARTUP=true pnpm dev",
-    "start": "pnpm demo:seed && node scripts/start-demo.cjs",
     "demo:test": "turbo run build --filter=@club-ops/shared --filter=@club-ops/ui && DEMO_MODE=true pnpm db:reset && DEMO_MODE=true pnpm --filter @club-ops/api db:migrate && DEMO_MODE=true pnpm --filter @club-ops/api seed && DEMO_MODE=true pnpm --filter @club-ops/api exec tsx src/db/seed-demo.ts && DEMO_MODE=true pnpm --filter @club-ops/api exec vitest run tests/demo-seed.test.ts",
+
     "telemetry:export": "node tools/telemetry/export-telemetry.mjs"
   },
   "devDependencies": {
@@ -37,6 +40,8 @@
     "@types/node": "^20.10.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.15.0",
+    "eslint-plugin-check-file": "^3.3.1",
+    "eslint-plugin-project-structure": "^3.14.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.11.0",
