--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,10 @@ jobs:
         with:
           node-version: 22
 
-      - name: Ensure pnpm is available
-        run: |
-          corepack enable
-          corepack prepare pnpm@10.28.0 --activate
-          pnpm --version
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.28.0
 
       - name: Resolve pnpm store path
         id: pnpm-store
